--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -118,6 +118,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 0 40px 0;
 }
 
 .destinations {
